nav spacing fix

--- a/css/main.css
+++ b/css/main.css
@@ -128,13 +128,14 @@ ul, ol {
   padding-top: .5rem;
 }
 
-ul {
+#body ul {
   list-style-type: disc;
   padding-bottom:1rem;
+  padding-left: 3rem;
 
 }
 
-#body ol, ul{
+#body ol, {
   padding-left: 3rem;
 }
 #body li {
