--- a/css/nav.css
+++ b/css/nav.css
@@ -113,7 +113,7 @@ _____________________________*/
 
 @media screen and (max-width:500px) {
   .nav-link {
-    padding: 2.2rem 1.5rem 0rem 1.5rem;
+    padding: 2.2rem 1rem 0rem 1rem;
   }
 }
 
